[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nanover-ase"
authors = [
    {name = "Intangible Realities Lab"},
]
description = "ASE integration for NanoVer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nanover",
    "ase >= 3.21",
]
dynamic = ["version"]

[project.scripts]
nanover-omm-ase = "nanover.ase.openmm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["nanover.*"]  # package names should match these glob patterns (["*"] by default)
