[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nanover-mdanalysis"
authors = [
    {name = "Intangible Realities Lab"},
]
description = "MDAnalysis integration for NanoVer"
requires-python = ">=3.12"
dependencies = [
    "nanover",
    "MDAnalysis",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["nanover.*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
