[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nanover-server"
authors = [
    {name = "Intangible Realities Lab"},
]
description = "Python servers for NanoVer."
requires-python = ">=3.11"
dependencies = [
    "openmm",
    "MDAnalysis",
    "numpy",
    "nglview",
    "netifaces",
    "grpcio>=1.63.0",
    "grpcio-tools>=1.63.0",
    "pytest",
    "aiogrpc",
    "numpy",
    "hypothesis",
    "ase >= 3.21",
    "setuptools>=40.1.1",
    "websockets>=15.0.0",
    "msgpack>=1.0.0",
]
dynamic = ["version"]

[project.scripts]
nanover-omni = "nanover.omni.cli:main"
nanover-record = "nanover.omni.recorder_cli:main"
nanover-omm-server = "nanover.openmm.cli:main"
nanover-essd-list = "nanover.essd.list_cli:main"
nanover-multiplayer = "nanover.multiplayer.cli:main"
nanover-dump-state = "nanover.recording.cli.dump_cli:main"
nanover-split-recording = "nanover.recording.cli.split_cli:main"
nanover-check-recording = "nanover.recording.cli.check_cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["nanover.*", "nanover.protocol"]  # package names should match these glob patterns (["*"] by default)
